--- a/index.html
+++ b/index.html
@@ -227,7 +227,9 @@
     <a class="footer-link" href="https://www.instagram.com/dikshantreyar/"><i class="social-icon fab fa-instagram"></i></a>
     <a class="footer-link" href="https://www.linkedin.com/in/dikshant-baghel-109781191/"><i class="social-icon fab fa-linkedin-in"></i></a>
     <p>© Copyright 2021 TinDog</p>
-
+<p class= "footer-text">
+      Made with <i class="fas fa-heart"></i>  by<a class ="name" href="https://www.instagram.com/dikshantreyar/"> Dikshant</a> 
+    </p>
     </div>
 
   </footer>
